--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "USER STORY",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon "
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "sequelize": "^6.3.3",
     "sequelize-cli": "^6.2.0"
   }
