--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/CodingErik/Project-2-#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
