--- a/package.json
+++ b/package.json
@@ -19,13 +19,24 @@
   },
   "homepage": "https://github.com/CodingErik/Project-2-#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcrypt-node": "^0.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.13.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.3",
     "sequelize-cli": "^6.2.0"
   },
