--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/CodingErik/Project-2-#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
