--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.3",
     "sequelize-cli": "^6.2.0"
   },
