--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Erikmysql",
+    "password": "d0Lc3d23!",
     "database": "Employee_management",
     "host": "127.0.0.1",
     "dialect": "mysql"
