--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
     "bcrypt": "^5.0.0",
     "bcrypt-node": "^0.1.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.13.1",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
-    "ejs": "^3.1.3",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
-    "express-validator": "^6.6.1",
+
     "faker": "^4.1.0",
     "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
