--- a/package.json
+++ b/package.json
@@ -1,28 +1,11 @@
 {
-  "name": "Project-2-",
+  "name": "project-2-",
   "version": "1.0.0",
-  "description": "Managing employees can be difficult without efficient organization. With this application managers will be able to communicate effectively to employees by assigning tasks and meetings. As an employee, employees will be able to see what needs to be done and assigned meetings.",
-  "main": "server.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "bcrypt-node": "^0.1.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "faker": "^4.1.0",
-    "handlebars": "^4.7.6",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "sequelize": "^6.3.3"
-  },
-  "devDependencies": {},
+  "description": "USER STORY",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -34,5 +17,26 @@
   "bugs": {
     "url": "https://github.com/CodingErik/Project-2-/issues"
   },
-  "homepage": "https://github.com/CodingErik/Project-2-#readme"
+  "homepage": "https://github.com/CodingErik/Project-2-#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
+    "faker": "^4.1.0",
+    "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.3.3",
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
