--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "USER STORY",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test":"echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
